Mut4All/bug-labels/c++/crash-on-invalid/53345.txt
Issue Title:
"Could not evaluate expression" in clang::Expr::EvaluateKnownConstInt

Source Code & Bug Trace:
cat >test.cpp <<EOF
void similar() {
  if constexpr (similer<>
EOF
clang++ -std=c++17 -c test.cpp


<source>:2:17: error: use of undeclared identifier 'similer'; did you mean 'similar'?
  if constexpr (similer<>
                ^~~~~~~
                similar
<source>:1:6: note: 'similar' declared here
void similar() {
     ^
clang++: /root/llvm-project/clang/lib/AST/ExprConstant.cpp:15100: llvm::APSInt clang::Expr::EvaluateKnownConstInt(const clang::ASTContext&, llvm::SmallVectorImpl<std::pair<clang::SourceLocation, clang::PartialDiagnostic> >*) const: Assertion `Result && "Could not evaluate expression"' failed.
PLEASE submit a bug report to https://github.com/llvm/llvm-project/issues/ and include the crash backtrace, preprocessed source, and associated run script.
Stack dump:
0.	Program arguments: /opt/compiler-explorer/clang-assertions-trunk/bin/clang++ -g -o /app/output.s -mllvm --x86-asm-syntax=intel -S --gcc-toolchain=/opt/compiler-explorer/gcc-snapshot -fcolor-diagnostics -fno-crash-diagnostics -std=c++17 <source>
1.	<eof> parser at end of file
2.	<source>:1:16: parsing function body 'similar'
3.	<source>:1:16: in compound statement ('{}')
 #0 0x0000560b5d6564bf PrintStackTraceSignalHandler(void*) Signals.cpp:0:0
 #1 0x0000560b5d6542c0 llvm::sys::CleanupOnSignal(unsigned long) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x3a542c0)
 #2 0x0000560b5d58ab28 CrashRecoverySignalHandler(int) CrashRecoveryContext.cpp:0:0
 #3 0x00007fd05ba9a3c0 __restore_rt (/lib/x86_64-linux-gnu/libpthread.so.0+0x153c0)
 #4 0x00007fd05b56918b raise (/lib/x86_64-linux-gnu/libc.so.6+0x4618b)
 #5 0x00007fd05b548859 abort (/lib/x86_64-linux-gnu/libc.so.6+0x25859)
 #6 0x00007fd05b548729 (/lib/x86_64-linux-gnu/libc.so.6+0x25729)
 #7 0x00007fd05b559f36 (/lib/x86_64-linux-gnu/libc.so.6+0x36f36)
 #8 0x0000560b602409cd clang::Expr::EvaluateKnownConstInt(clang::ASTContext const&, llvm::SmallVectorImpl<std::pair<clang::SourceLocation, clang::PartialDiagnostic> >*) const (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x66409cd)
 #9 0x0000560b5f94958a clang::Sema::ActOnCondition(clang::Scope*, clang::SourceLocation, clang::Expr*, clang::Sema::ConditionKind, bool) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x5d4958a)
#10 0x0000560b5f5becb3 clang::Parser::ParseCXXCondition(clang::ActionResult<clang::Stmt*, true>*, clang::SourceLocation, clang::Sema::ConditionKind, bool, clang::Parser::ForRangeInfo*, bool) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x59becb3)
#11 0x0000560b5f6073cc clang::Parser::ParseParenExprOrCondition(clang::ActionResult<clang::Stmt*, true>*, clang::Sema::ConditionResult&, clang::SourceLocation, clang::Sema::ConditionKind, bool, clang::SourceLocation*, clang::SourceLocation*) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x5a073cc)
#12 0x0000560b5f60fb1b clang::Parser::ParseIfStatement(clang::SourceLocation*) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x5a0fb1b)
#13 0x0000560b5f609b5b clang::Parser::ParseStatementOrDeclarationAfterAttributes(llvm::SmallVector<clang::Stmt*, 32u>&, clang::Parser::ParsedStmtContext, clang::SourceLocation*, clang::ParsedAttributesWithRange&) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x5a09b5b)
#14 0x0000560b5f60a9ec clang::Parser::ParseStatementOrDeclaration(llvm::SmallVector<clang::Stmt*, 32u>&, clang::Parser::ParsedStmtContext, clang::SourceLocation*) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x5a0a9ec)
#15 0x0000560b5f60b58b clang::Parser::ParseCompoundStatementBody(bool) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x5a0b58b)
#16 0x0000560b5f60b99b clang::Parser::ParseFunctionStatementBody(clang::Decl*, clang::Parser::ParseScope&) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x5a0b99b)
#17 0x0000560b5f56f204 clang::Parser::ParseFunctionDefinition(clang::ParsingDeclarator&, clang::Parser::ParsedTemplateInfo const&, clang::Parser::LateParsedAttrList*) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x596f204)
#18 0x0000560b5f591552 clang::Parser::ParseDeclGroup(clang::ParsingDeclSpec&, clang::DeclaratorContext, clang::SourceLocation*, clang::Parser::ForRangeInit*) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x5991552)
#19 0x0000560b5f56b3e9 clang::Parser::ParseDeclOrFunctionDefInternal(clang::ParsedAttributesWithRange&, clang::ParsingDeclSpec&, clang::AccessSpecifier) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x596b3e9)
#20 0x0000560b5f56bb31 clang::Parser::ParseDeclarationOrFunctionDefinition(clang::ParsedAttributesWithRange&, clang::ParsingDeclSpec*, clang::AccessSpecifier) (.part.280) Parser.cpp:0:0
#21 0x0000560b5f56bd20 clang::Parser::ParseExternalDeclaration(clang::ParsedAttributesWithRange&, clang::ParsingDeclSpec*) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x596bd20)
#22 0x0000560b5f56c979 clang::Parser::ParseTopLevelDecl(clang::OpaquePtr<clang::DeclGroupRef>&, bool) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x596c979)
#23 0x0000560b5f56cce5 clang::Parser::ParseFirstTopLevelDecl(clang::OpaquePtr<clang::DeclGroupRef>&) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x596cce5)
#24 0x0000560b5f562ab3 clang::ParseAST(clang::Sema&, bool, bool) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x5962ab3)
#25 0x0000560b5e674918 clang::CodeGenAction::ExecuteAction() (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x4a74918)
#26 0x0000560b5e0102e1 clang::FrontendAction::Execute() (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x44102e1)
#27 0x0000560b5dfabd4a clang::CompilerInstance::ExecuteAction(clang::FrontendAction&) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x43abd4a)
#28 0x0000560b5e0d9a73 clang::ExecuteCompilerInvocation(clang::CompilerInstance*) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x44d9a73)
#29 0x0000560b5afeac0c cc1_main(llvm::ArrayRef<char const*>, char const*, void*) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x13eac0c)
#30 0x0000560b5afe5fa9 ExecuteCC1Tool(llvm::SmallVectorImpl<char const*>&) driver.cpp:0:0
#31 0x0000560b5de50065 void llvm::function_ref<void ()>::callback_fn<clang::driver::CC1Command::Execute(llvm::ArrayRef<llvm::Optional<llvm::StringRef> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, bool*) const::'lambda'()>(long) Job.cpp:0:0
#32 0x0000560b5d58b113 llvm::CrashRecoveryContext::RunSafely(llvm::function_ref<void ()>) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x398b113)
#33 0x0000560b5de523f6 clang::driver::CC1Command::Execute(llvm::ArrayRef<llvm::Optional<llvm::StringRef> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, bool*) const (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x42523f6)
#34 0x0000560b5de2738a clang::driver::Compilation::ExecuteCommand(clang::driver::Command const&, clang::driver::Command const*&) const (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x422738a)
#35 0x0000560b5de2801f clang::driver::Compilation::ExecuteJobs(clang::driver::JobList const&, llvm::SmallVectorImpl<std::pair<int, clang::driver::Command const*> >&) const (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x422801f)
#36 0x0000560b5de3030a clang::driver::Driver::ExecuteCompilation(clang::driver::Compilation&, llvm::SmallVectorImpl<std::pair<int, clang::driver::Command const*> >&) (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x423030a)
#37 0x0000560b5af0f15f main (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x130f15f)
#38 0x00007fd05b54a0b3 __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x270b3)
#39 0x0000560b5afe5b1a _start (/opt/compiler-explorer/clang-assertions-trunk/bin/clang+++0x13e5b1a)
clang-14: error: clang frontend command failed with exit code 134 (use -v to see invocation)
Compiler returned: 134


Bug Labels:
c++17, clang:frontend, crash-on-invalid, regression